// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > when error prop is set > matches the snapshot 1`] = `
"<div class="column inputField error"><label class="mBXS sentenceCase smallFont label" for="id">label
    <!--v-if-->
  </label><input id="id" autocomplete="off" class="input" type="text">
  <p class="smallFont sentenceCase">Error message.</p>
</div>"
`;

exports[`InputField > when hideLabel prop is set to true > matches the snapshot 1`] = `
"<div class="column inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="id">label
    <!--v-if-->
  </label><input id="id" autocomplete="off" class="input" type="text">
  <!--v-if-->
</div>"
`;

exports[`InputField > when required prop is set to true > matches the snapshot 1`] = `
"<div class="column inputField"><label class="mBXS sentenceCase smallFont label" for="id">label <span class="required">*</span></label><input id="id" autocomplete="off" class="input" required="" type="text">
  <!--v-if-->
</div>"
`;
